tests/fixtures/invalid/bool_lshift_float.py
# Cannot left shift Bool and Float
x: float = True << 1.0
